fixed another image path

--- a/contribution_instructions.Rmd
+++ b/contribution_instructions.Rmd
@@ -77,7 +77,7 @@ On your computer, navigate to the local copy of the repository using your usual 
 
 Now you've added your script to your local copy of the repository, but you still need to upload your changes to your fork on your GitHub before you can merge them with the original on the Motus community scripts repository page. In RStudio, select the **Git** tab and you will see a list of files in your local copy of the repository. Select the checkbox(es) of the file(s) you added. The yellow question mark boxes will change to a green A (for "added") if it is a file that hasn't yet been uploaded to GitHub. If you have uploaded a previous version of this file to GitHub, you'll see a blue M (for "modified").
 
-![](images/git_tab2.JPG)
+![](images/git_tab2.jpg)
 
 Then click on **Commit**.
 
