testing repo transfer

--- a/contribution_instructions.Rmd
+++ b/contribution_instructions.Rmd
@@ -9,7 +9,11 @@ editor_options:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-**Note:** If you would prefer not to use GitHub, you can submit a zip file with your script, instructions, and any associated files to motus@birdscanada.org and we will upload it to the repository.
+**Notes:**
+
+* If you would prefer not to use GitHub, you can submit a zip file with your script, instructions, and any associated files to motus@birdscanada.org and we will upload it to the repository.
+
+* If you previously forked the Motus repository to make earlier changes and are now making new changes later, you should keep your fork current in case others have made changes in the interim to the repository.
 
 ## 1. Create a GitHub account and install Git
 
@@ -112,8 +116,6 @@ On the **Compare changes** page, click **compare across forks**. In the **base r
 ![](images/compare_changes1.jpg)
 
 Write a title and description for your pull request so that the folks at Motus know what you are contributing. Once received, Motus will push your contribution to the main repository so that others can benefit from your code.
-
-**Note:** If you previously forked the Motus repository to make earlier changes and are now making new changes later, you should keep your fork current in case others have made changes in the interim to the repository.
 
 ## Resources
 
